--- a/src/admin/settings/index.scss
+++ b/src/admin/settings/index.scss
@@ -1,67 +1,99 @@
-#foopb-settings {
+.settings_page_foopb_settings {
 
-  .components-placeholder {
-    background: #f1f1f1;
+  #wpcontent {
+    padding-left: 0;
   }
 
-  .foopb__header {
-    background-color: #ffffff;
-    box-shadow: 0 1px 0 rgba(213, 213, 213, .5), 0 1px 2px #eeeeee;
-    margin-left: -2em;
-    padding: 20px 10px;
+  #foopb-settings {
 
-    .foopb__container {
-      margin: 0 auto;
-      max-width: 750px;
+    .settings-placeholder {
+      display: flex;
+      width: 100%;
+      height: 200px;
+      justify-content: center;
+      align-items: center;
 
-      .foopb__title {
-        align-items: center;
-        display: flex;
-        justify-content: center;
+      .components-spinner {
+        margin: 0;
+      }
+    }
 
-        .dashicon {
-          color: #757575;
+    .settings__header {
+      background-color: #ffffff;
+      box-shadow: 0 1px 0 rgba(213, 213, 213, .5), 0 1px 2px #eeeeee;
+      margin-left: -2em;
+      padding: 20px 10px 48px;
+
+      .settings__container {
+        margin: 0 auto;
+        max-width: 750px;
+
+        .settings__title {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          > h1 {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-items: center;
+
+            .dashicon {
+              color: #757575;
+              width: 32px;
+              height: 32px;
+              font-size: 32px;
+              margin-right: 6px;
+            }
+          }
+
+          .settings__version {
+            box-shadow: 0 0 2px 0 rgba(0,0,0,0.75);
+            padding: 13px 10px 10px;
+            font-family: Courier, "Courier New", monospace;
+            font-size: 16px;
+            font-weight: 600;
+            border-radius: 6px;
+            margin-left: 24px;
+          }
+        }
+
+        .settings__description {
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
       }
     }
-  }
 
-  .foopb__main {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 750px;
-
-    .components-panel {
-      background: none;
-      border: none;
+    .settings__main {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 750px;
     }
 
-    .components-panel__body {
-      background: #ffffff;
-      border: 1px solid #e2e4e7;
-      margin: 1rem 0;
-    }
-  }
+    .settings__actions {
+      max-width: 750px;
+      display: flex;
+      flex-direction: row-reverse;
+      margin: 24px auto;
 
-  .components-base-control__help {
-    margin-top: .5rem;
-  }
+      .components-button {
+        margin-right: 6px;
 
-  .components-panel__row {
-    > div {
-      flex-grow: 1;
-      margin-right: 1rem;
-
-      &:last-of-type {
-        margin-right: 0;
+        &:first-of-type {
+          margin-right: 0;
+        }
       }
     }
-  }
 
-  .foopb__notices {
-    .components-snackbar {
-      bottom: .5rem;
-      position: fixed;
+    .settings__notices {
+      .components-snackbar {
+        bottom: 24px;
+        right: 24px;
+        position: fixed;
+      }
     }
   }
 }
